# task_runner

./: CMakeLists.txt  README.md
doc/: task_runner.drawio
example/: CMakeLists.txt  example.cc  main.cc
src/: runner.h  task_manager.cc  task_manager.h
src/base/: logging.cc  logging.h  time.cc  time.h
src/callback/: bind.h  callback.h  callback_traits.h  callback_traits_port.h  function_traits.h  traits_utils.h
src/task/: conqurrent_task_runner.cc  conqurrent_task_runner.h  sequenced_task_runner.cc  sequenced_task_runner.h  task.h  task_dispatcher.cc  task_dispatcher.h  task_executor.cc  task_executor.h  task_executor_delegate.h  task_executor_pool.h  task_manager.h  task_queue.h  task_runner.cc  task_runner.h
src/thread/: thread.h  thread_pool.h  worker_thread.cc  worker_thread.h  worker_thread_pool.h
